# andriod-llm

./: .gitignore  QUANTIZE_MODEL.md  README.md  android.md  build.gradle.kts  chat_cli.py  crash_analysis.md  crash_analysis_set_rows_q4_0.md  gradle.properties  llamaImp.md  local.properties  optimization_progress.md  performance_analysis.md  prompt_evaluation_optimization_analysis.md  prompt_performance_evaluation.md  prompt_performance_evaluation_v2.md  prompt_performance_evaluation_v3.md  prompt_performance_evaluation_v4.md  settings.gradle.kts  sp_token_rm.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  opencl_shim.cpp
app/src/main/cpp/native/: jni_bridge.cpp
app/src/main/java/com/example/llama/: MainActivity.kt
app/src/main/java/com/example/llama/data/: ChatRepository.kt  LlmDecision.kt  ModelFiles.kt  ModelPathStore.kt  TavilyApiService.kt
app/src/main/java/com/example/llama/nativebridge/: LlamaBridge.kt  TokenCallback.kt
app/src/main/java/com/example/llama/ui/: ChatScreen.kt  ChatViewModel.kt
app/src/main/java/com/example/llama/ui/model/: Models.kt
app/src/main/res/values/: strings.xml  themes.xml
